--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^2.1.2",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -26,6 +27,8 @@
     "hammerjs": "^2.0.8",
     "ngx-dynamic-form-builder": "^1.0.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.3",
+    "sweetalert2": "^9.3.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
