--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@syncfusion/ej2-angular-calendars": "^17.3.27",
+    "angular-calendar": "^0.27.20",
     "class-validator": "^0.10.0",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
     "hammerjs": "^2.0.8",
     "ngx-dynamic-form-builder": "^1.0.0",
     "rxjs": "~6.3.3",
